# vsomeip

./: .gitignore  WORKSPACE.bazel  do.sh
.circleci/: config.yml
migration-analysis/: .mig.json  Cargo.toml
migration-analysis/src/: main.rs
migration-analysis/src/circleci/: client.rs  jobs.rs  migration.rs  mod.rs  session.rs
migration-analysis/src/cli/: app.rs
migration-analysis/src/config/: manager.rs
vsomeip/migration-analysis/src/circleci/: mod.rs
vsomeip/migration-analysis/src/cli/: app.rs
