[package]
name = "migration-analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
mockall = "0.11.4"
reqwest = {version = "0.11.20", features = ["json"]}
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

